add delete from server

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,12 @@
 </head>
 <body>
 <div class="container">
-  <div class="row">
-    <app-root></app-root>
+  <div class="row justify-content-md-center">
+    <div class="col-md-8">
+      <div class="row">
+        <app-root></app-root>
+      </div>
+    </div>
   </div>
 </div>
 </body>
